--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
+    "phosphor-react": "^1.4.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,6 +24,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
