--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.2",
     "@rocketseat/eslint-config": "^2.1.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
